polishing and adding more OpenAPI docs
